--- a/_posts/2017-06-13-tistory-71.md
+++ b/_posts/2017-06-13-tistory-71.md
@@ -2,10 +2,10 @@
 layout: post
 title: 팀에게 애자일 조금씩 주입하기.
 description: Introduction 안녕하세요. 오픈소스컨설팅 솔루션 설계팀 김세연입니다. 저희는 기존 시스템을 오픈소스로 전환, 사용 지원하고 있습니다. 더 많은 내용은 www.osci.kr 에서 확인해 주세요. 고객에게 가치를 전달..
-author: it2seiyon
+author: OpenSourceConsulting
 date: 2017-06-13T22:50:47+09:00
-tags: [OpenSourceConsulting]
-category: OpenSourceConsulting
+tags: [Agile, Jira]
+category: Agile, Jira
 ---
 <div class="area_view">
  <div class="tt_article_useless_p_margin">
