--- a/_posts/2017-01-31-tistory-59.md
+++ b/_posts/2017-01-31-tistory-59.md
@@ -2,7 +2,7 @@
 layout: post
 title: Jira 개요
 description: "Atlassian의 대표 제품 Jira에 대해서 알아보겠습니다."
-author: it2seiyon
+author: wjsrkqdlf
 date: 2017-01-31T19:41:11+09:00
 tags: [Jira, Atlassian]
 category: Atlassian, Jira
