--- a/_posts/2017-02-05-tistory-63.md
+++ b/_posts/2017-02-05-tistory-63.md
@@ -2,7 +2,7 @@
 layout: post
 title: Jira 설정_3(Project / Application / Add-ons)
 description: "Jira Project, Application, Add-on에 대해 알아보겠습니다."
-author: it2seiyon
+author: wjsrkqdlf
 date: 2017-02-05T13:23:05+09:00
 tags: [OpenSourceConsulting]
 category: OpenSourceConsulting
